syntax = "proto3";

import "lsx.lockdown.proto";
import "lsx.fluff.proto";
import "lsx.power.proto";

message Request {
    oneof request {
        GetPowerPlantState.Request get_power_plant_state = 1;
        SetPowerPlantState.Request set_power_plant_state = 2;
        GetPowerGridState.Request get_power_grid_state = 3;
        SetPowerGridState.Request set_power_grid_state = 4;
        GetAnnouncementFiles.Request get_announcement_files = 5;
        GetBaseState.Request get_base_state = 6;
        SetBaseState.Request set_base_state = 7;
        GetAutoLockdown.Request get_auto_lockdown = 8;
        SetAutoLockdown.Request set_auto_lockdown = 9;
        GetLockdownAnnouncements.Request get_lockdown_announcements = 10;
        SetLockdownAnnouncements.Request set_lockdown_announcements = 11;
        GetFluffFiles.Request get_fluff_files = 12;
        GetFluffState.Request get_fluff_state = 13;
        SetFluffState.Request set_fluff_state = 14;
        PlayAnnouncement.Request play_announcement = 15;
    }
}

message Response {
    oneof response {
        GetPowerPlantState.Response get_power_plant_state = 1;
        SetPowerPlantState.Response set_power_plant_state = 2;
        GetPowerGridState.Response get_power_grid_state = 3;
        SetPowerGridState.Response set_power_grid_state = 4;
        GetAnnouncementFiles.Response get_announcement_files = 5;
        GetBaseState.Response get_base_state = 6;
        SetBaseState.Response set_base_state = 7;
        GetAutoLockdown.Response get_auto_lockdown = 8;
        SetAutoLockdown.Response set_auto_lockdown = 9;
        GetLockdownAnnouncements.Response get_lockdown_announcements = 10;
        SetLockdownAnnouncements.Response set_lockdown_announcements = 11;
        GetFluffFiles.Response get_fluff_files = 12;
        GetFluffState.Response get_fluff_state = 13;
        SetFluffState.Response set_fluff_state = 14;
        PlayAnnouncement.Response play_announcement = 15;
    }
}

message LsxMessage {
    string id = 1;

    oneof message{
        Request request = 2;
        Response response = 3;
    }
}

message GetAnnouncementFiles {
    message Response {
        repeated string files = 1;
    }

    message Request {

    }

    oneof message {
        Request request = 1;
        Response response = 2;
        string error = 3;
    }
}

message PlayAnnouncement {
    message Request {
        string filepath = 1;
    }

    message Response {

    }

    oneof message {
        Request request = 1;
        Response response = 2;
        string error = 3;
    }
}



